--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.7.2",
     "jwt-decode": "^4.0.0",
+    "multiselect-react-dropdown": "^2.0.25",
     "prettier": "^2.8.1",
     "react": "^18.2.0",
     "react-click-away-listener": "^2.2.3",
