--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^32.1.0",
+    "ag-grid-react": "^32.1.0",
     "antd": "^5.19.4",
     "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.7.2",
