--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^5.19.4",
     "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "multiselect-react-dropdown": "^2.0.25",
     "prettier": "^2.8.1",
